<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/gametoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAFAFA"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/RestTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="108sp"
                android:text="@string/resttime"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/TimeBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/TimeBar"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:animationResolution="1"
                android:max="100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/gamestart"
                app:layout_constraintStart_toEndOf="@+id/RestTime"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/gamestart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/TimeBar"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/buttonNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Num"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonX"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gametoolbar"
        app:layout_constraintVertical_bias="0.98" />

    <Button
        android:id="@+id/buttonX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/X"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonXX"
        app:layout_constraintStart_toEndOf="@id/buttonNum"
        app:layout_constraintTop_toBottomOf="@+id/gametoolbar"
        app:layout_constraintVertical_bias="0.98" />

    <Button
        android:id="@+id/buttonXX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/XX"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonXXX"
        app:layout_constraintStart_toEndOf="@id/buttonX"
        app:layout_constraintTop_toBottomOf="@+id/gametoolbar"
        app:layout_constraintVertical_bias="0.98" />

    <Button
        android:id="@+id/buttonXXX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/XXX"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonXX"
        app:layout_constraintTop_toBottomOf="@+id/gametoolbar"
        app:layout_constraintVertical_bias="0.98" />

    <TextView
        android:id="@+id/GameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="15"
        android:text="@string/init_game_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gametoolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>