<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aifight"
    android:visibility="visible"
    tools:context=".BenchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/benchtoolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/benchprogress"
        style="?android:attr/progressBarStyle"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/benchtoolbar"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/benchstart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50sp"
        android:layout_marginLeft="50sp"
        android:background="@drawable/clear_button"
        android:text="@string/bench_start"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/benchtoolbar"
        app:layout_constraintEnd_toEndOf="@+id/benchtoolbar"
        app:layout_constraintStart_toStartOf="@+id/benchtoolbar"
        app:layout_constraintTop_toTopOf="@id/benchtoolbar"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bench1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150sp"
            android:text="@string/bench1"
            android:textColor="#2979FF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/bench2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bench2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150sp"
            android:text="@string/bench2"
            android:textColor="#2979FF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/bench3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bench1" />

        <TextView
            android:id="@+id/bench3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150sp"
            android:text="@string/bench3"
            android:textColor="#2979FF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bench2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>